# pac-gl

./: .gitignore  :w  CMakeLists.txt  Makefile  README.md
.ccls-cache/@@home@ixilminiussi@Desktop@pac-gl/: @usr@include@GL@freeglut_std.h.blob  @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@GL@glu.h.blob  @usr@include@GL@glut.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@SDL2@SDL.h.blob  @usr@include@SDL2@SDL_assert.h.blob  @usr@include@SDL2@SDL_atomic.h.blob  @usr@include@SDL2@SDL_audio.h.blob  @usr@include@SDL2@SDL_blendmode.h.blob  @usr@include@SDL2@SDL_clipboard.h.blob  @usr@include@SDL2@SDL_config-x86_64.h  @usr@include@SDL2@SDL_config-x86_64.h.blob  @usr@include@SDL2@SDL_config.h.blob  @usr@include@SDL2@SDL_cpuinfo.h.blob  @usr@include@SDL2@SDL_endian.h.blob  @usr@include@SDL2@SDL_error.h.blob  @usr@include@SDL2@SDL_events.h.blob  @usr@include@SDL2@SDL_filesystem.h.blob  @usr@include@SDL2@SDL_gamecontroller.h.blob  @usr@include@SDL2@SDL_gesture.h.blob  @usr@include@SDL2@SDL_guid.h.blob  @usr@include@SDL2@SDL_haptic.h.blob  @usr@include@SDL2@SDL_hidapi.h.blob  @usr@include@SDL2@SDL_hints.h.blob  @usr@include@SDL2@SDL_joystick.h.blob  @usr@include@SDL2@SDL_keyboard.h.blob  @usr@include@SDL2@SDL_keycode.h.blob  @usr@include@SDL2@SDL_loadso.h.blob  @usr@include@SDL2@SDL_locale.h.blob  (+371 more)
include/: cube.hpp  game.hpp  ghost.hpp  pacman.hpp  sound.hpp  vector.hpp  wait.hpp
scripts/: dependencies-fedora.sh  dependencies-ubuntu.sh
src/: .main.cpp  cube.cpp  game.cpp  ghost.cpp  main.cpp  pacman.cpp  sound.cpp  wait.cpp
(+81 files in other folders)
